--- a/Ember/Ember.vcxproj.filters
+++ b/Ember/Ember.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClCompile Include="Src\Graphics\Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Core\Callbacks.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Core\Callbacks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sandbox\TestLayer.h">
