--- a/Ember/Ember.vcxproj.filters
+++ b/Ember/Ember.vcxproj.filters
@@ -1028,6 +1028,12 @@
     <ClInclude Include="Src\Core\AllocationMetrics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Graphics\LightCaster.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Graphics\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Src\Math\detail\type_vec4_simd.inl">
