--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Engine/libs/math"]
 	path = Engine/libs/math
 	url = git@github.com:g-truc/glm.git
+[submodule "Engine/libs/windowCreation"]
+	path = Engine/libs/windowCreation
+	url = git@github.com:glfw/glfw.git
